# duckdb-netquack

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md  SUMMARY.md  debugging.md  why-netquack.md
docs/collaboration/: contributing.md  issues.md  roadmap.md
docs/functions/: base64-functions.md  domain-depth.md  editor.md  extract-domain.md  extract-extension.md  extract-fragment.md  extract-host.md  extract-path-segments.md  extract-path.md  extract-query.md  extract-schema.md  extract-subdomain.md  extract-tld.md  extract_port.md  is-valid-domain.md  is-valid-url.md  normalize-url.md  url-encode-functions.md
docs/getting-started/: debugging.md  how-to-build.md  publish-your-docs.md  quickstart.md
docs/ip-address/: README.md  ip-calculator.md  ip-to-int.md  ip-version.md  is-private-ip.md  is-valid-ip.md
scripts/: benchmark.sh  generate_tld_lookup.sh  setup-custom-toolchain.sh
src/: netquack_extension.cpp  utils.cpp
src/functions/: base64_functions.cpp  base64_functions.hpp  domain_depth.cpp  domain_depth.hpp  extract_domain.cpp  extract_domain.hpp  extract_extension.cpp  extract_extension.hpp  extract_fragment.cpp  extract_fragment.hpp  extract_host.cpp  extract_host.hpp  extract_path.cpp  extract_path.hpp  extract_path_segments.cpp  extract_path_segments.hpp  extract_port.cpp  extract_port.hpp  extract_query.cpp  extract_query.hpp  (+21 more)
(+45 files in other folders)
